--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,16 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% block content %}
 
-<body>
+<!-- index.html content starts here -->
+<div class="container-fluid">
+    <div class="row">
 
-    <h1>Test</h1>
+        <!-- Blog Entries Column -->
+        <div class="col-12 mt-3 left">
+            <div class="row">
 
-</body>
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                <div class="image-flash">
+                                    <p class="author"></p>
+                                </div>
+                            </div>
+                            <a href="#" class="post-link">
+                                <h2 class="card-title"></h2>
+                            </a>
 
-</html>
+                            <hr />
+                            <p class="card-text text-muted h6">
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+
+
+
+            </div>
+        </div>
+    </div>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"></a></li>
+
+        </ul>
+    </nav>
+
+</div>
+
+<!-- index.html content ends here -->
+{% endblock %}
