--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -21,8 +21,8 @@
                             <a href="#" class="post-link">
                                 <h2 class="card-title"></h2>
                             </a>
+                            <h2>{{ about.title }}</h2>
 
-                            <hr />
                             <p class="card-text text-muted h6">
                             </p>
                         </div>
@@ -39,14 +39,10 @@
     </div>
 
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
 
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"></a></li>
-
-        </ul>
     </nav>
 
 </div>
 
-<!-- index.html content ends here -->
+<!-- about.html content ends here -->
 {% endblock %}
