--- a/bookings/templates/bookings/bookingmanager.html
+++ b/bookings/templates/bookings/bookingmanager.html
@@ -24,7 +24,7 @@
                                 <h2 class="card-title"></h2>
                             </a>
                             <h2>{{ bookings.title }}</h2>
-
+                            {{ bookings.content | safe }}
                             <p class="card-text text-muted h6">
                             </p>
                         </div>
@@ -33,9 +33,12 @@
 
             </div>
             <div class="row">
-
-
-
+                <!-- Booking Manager form -->
+                <form method="post">
+                    {{ book_form | crispy }}
+                    {% csrf_token %}
+                    <button class="btn btn-secondary" type="submit">Submit</button>
+                </form>
             </div>
         </div>
     </div>
