Added some information in the index and about pages, both styling and html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,8 +22,24 @@
                                 <h2 class="card-title"></h2>
                             </a>
                             <h2>{{ home.title }}</h2>
-
-                            <p class="card-text text-muted h6">
+                            <h2 class='border border-success border-3'>Action Movies<br><a href='/bookings/'>Booking</a>
+                            </h2>
+                            <h2 class='border border-info border-3'>Comedy Movies<br><a href='/bookings/'>Booking</a>
+                            </h2>
+                            <h2 class='border border-warning border-3'>Drama Movies<br><a href='/bookings/'>Booking</a>
+                            </h2>
+                            <h2 class='border border-danger border-3'>Video Games<br><a href='/bookings/'>Booking</a>
+                            </h2>
+                            <p class="card-text text-muted h6 border border-dark border-3">The Fancy Cinema Castle is
+                                different from other cinemas.<br>
+                                Here you will book a whole auditorium for 2 to 20 people, where you can watch movies or
+                                play games for 5 hours a session.<br>
+                                You will experience superior video and sound quality and you will tell us what movies in
+                                the genre you want to watch or which games and gaming consoles you want to play on.<br>
+                                We have a great selection of options to eat and snack on and also a great selection of
+                                soda and we brew our own beer.<br>
+                                If you don't add any information about movies or games in your wishes in the booking
+                                form, we will choose for you.
                             </p>
                         </div>
                     </div>
