Added favicons, icon, background picture and did styling with colours, done with navbar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
                             </h2>
                             <h2 class='border border-danger border-3'>Video Games<br><a href='/bookings/'>Booking</a>
                             </h2>
-                            <p class="card-text text-muted h6 border border-dark border-3">The Fancy Cinema Castle is
+                            <p class="card-text h6 border border-dark border-3">The Fancy Cinema Castle is
                                 different from other cinemas.<br>
                                 Here you will book a whole auditorium for 2 to 20 people, where you can watch movies or
                                 play games for 5 hours a session.<br>
