--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,22 @@
 body {
-    background-color: #F9FAFC;
+    color: rgb(225, 201, 201);
 }
+
+#cinema-castle {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px solid darkmagenta;
+    z-index: 0;
+    position: absolute;
+}
+
+#h1 {
+    color: rgb(225, 201, 201);
+}
+
+
 
 .brand {
     font-family: Lato, sans-serif;
