--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,5 +1,15 @@
 body {
-    background-color: #F9FAFC;
+    color: rgb(225, 201, 201);
+}
+
+#cinema-castle {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px solid #8b008b;
+    z-index: 0;
+    position: absolute;
 }
 
 .brand {
