--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom border-1">
-        <div class="container-fluid text-info">
+        <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand"><img id='nav-icon' loading="lazy"
                         src="https://res.cloudinary.com/dpfuyoali/image/upload/hyhrvescn4gkopss7ps9"
                         alt="Castle Icon"></span></a>
@@ -100,19 +100,26 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer mt-auto py-3 dark-bg">
-            <p class="m-0 text-center text-white">
+        <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1">
+            <p class="m-0 text-center">
                 {% block copyright %}
                 Copyright 2024 Alexander Åberg
                 {% endblock %}
             </p>
-            <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
-                <i class="fab fa-twitter-square ms-3"></i>
-                <i class="fab fa-instagram-square ms-3"></i>
-                <i class="fab fa-youtube-square ms-3"></i>
+            <p class="m-0 text-center">
+                <a class='text-secondary' href="https://facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Our Facebook (Opens in a new browser tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a class='text-secondary' href="https://instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Our instagram (Opens in a new browser tab)"><i class="fa-brands fa-instagram"></i></a>
+                <a class='text-secondary' href="https://youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Our YouTube (Opens in a new browser tab)"><i class="fa-brands fa-youtube"></i></a>
+                <a class='text-secondary' href="https://x.com/" target="_blank" rel="noopener"
+                    aria-label="Our X (Opens in a new browser tab)"><i class="fa-brands fa-x-twitter"></i></a>
             </p>
         </footer>
-
+        <!-- Font Awesome Kit -->
+        <script src="https://kit.fontawesome.com/b2b2c0091d.js" crossorigin="anonymous"></script>
+        <!-- Boostrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
