Got back the footer, also delted a div that wasn't needed

--- a/templates/base.html
+++ b/templates/base.html
@@ -87,9 +87,7 @@
         {% else %}
         <p class='text-end m-3'>You are not logged in</p>
         {% endif %}<main class="flex-shrink-0 main-bg bg-dark">
-            <div class="">
-                <h1 id='h1'>Welcome to The Fancy Cinema Castle</h1>
-            </div>
+            <h1 id='h1'>Welcome to The Fancy Cinema Castle</h1>
             <img id='cinema-castle' loading="lazy"
                 src="https://res.cloudinary.com/dpfuyoali/image/upload/The Fancy Cinema Castle/xsavj5bsme6swc90sj4q.jpg"
                 alt="Cinema Castle">
@@ -100,7 +98,7 @@
         </main>
 
         <!-- Footer -->
-        <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1">
+        <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1 fixed-bottom">
             <p class="m-0 text-center">
                 {% block copyright %}
                 Copyright 2024 Alexander Åberg
