Created a carousel for the home page with placeholder images that I will replace later

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,103 +2,100 @@
 {% load static %}
 {% block content %}
 
-<!-- index.html content starts here -->
+<!-- About.html content starts here -->
 <div class="container-fluid">
     <div class="row">
-
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author"></p>
+        <div class="col-xl-12 mt-6">
+            <div class="card mb-4">
+                <div class="container">
+                    <div>
+                        <div class="row justify-content-1">
+                            <div class="col-12">
+                                <div class='border border-success border-3'>
+                                    <h2>Action Movies<br>
+                                    </h2>
+                                    <p>
+                                        Our action movie auditorium is built to fit action movies perfectly with a huge
+                                        crystal clear screen and a surround system from luxury brands.
+                                        It has 20 very comfortable seats with different settings and of course space for
+                                        drinks and snacks, you can also with a button remake 2 seats to a sofa.
+                                        The lights, vibrations and smells is also adjusted to action movies and will
+                                        help to
+                                        give a complete 7D experience.
+                                    </p>
+                                    <a href='/bookings/'>Booking</a>
                                 </div>
                             </div>
-                            <a href="#" class="post-link">
-                                <h2 class="card-title"></h2>
-                            </a>
-                            <h2>{{ about.title }}</h2>
-                            <div class='border border-success border-3'>
-                                <h2>Action Movies<br>
-                                </h2>
-                                <p>
-                                    Our action movie auditorium is built to fit action movies perfectly with a huge
-                                    crystal clear screen and a surround system from luxury brands.
-                                    It has 20 very comfortable seats with different settings and of course space for
-                                    drinks and snacks, you can also with a button remake 2 seats to a sofa.
-                                    The lights, vibrations and smells is also adjusted to action movies and will help to
-                                    give a complete 7D experience.
-                                </p>
-                                <a href='/bookings/'>Booking</a>
+                        </div>
+                        <div class="row justify-content-2">
+                            <div class="col-2">
+                                <div class='border border-info border-3'>
+                                    <h2>Comedy Movies<br>
+                                    </h2>
+                                    <p>
+                                        Our comedy movie auditorium is built to fit comedies perfectly with a huge
+                                        crystal clear screen and a surround system from luxury brands.
+                                        It has 20 very comfortable seats with different settings and of course space for
+                                        drinks and snacks, you can also with a button remake 2 seats to a sofa.
+                                        The lights, vibrations and smells is also adjusted to comedy movies and will
+                                        help to
+                                        give a complete 7D experience.
+                                    </p>
+                                    <a href='/bookings/'>Booking</a>
+                                </div>
                             </div>
-                            <div class='border border-info border-3'>
-                                <h2>Comedy Movies<br>
-                                </h2>
-                                <p>
-                                    Our comedy movie auditorium is built to fit comedies perfectly with a huge
-                                    crystal clear screen and a surround system from luxury brands.
-                                    It has 20 very comfortable seats with different settings and of course space for
-                                    drinks and snacks, you can also with a button remake 2 seats to a sofa.
-                                    The lights, vibrations and smells is also adjusted to comedy movies and will help to
-                                    give a complete 7D experience.
-                                </p>
-                                <a href='/bookings/'>Booking</a>
+                        </div>
+                        <div class="row justify-content-3">
+                            <div class="col-4">
+                                <div class='border border-warning border-3'>
+                                    <h2>Drama Movies<br>
+                                    </h2>
+                                    <p>
+                                        Our drama movie auditorium is built to fit dramas perfectly with a huge
+                                        crystal clear screen and a surround system from luxury brands.
+                                        It has 20 very comfortable seats with different settings and of course space for
+                                        drinks and snacks, you can also with a button remake 2 seats to a sofa.
+                                        The lights, vibrations and smells is also adjusted to dramas and will help to
+                                        give a complete 7D experience.
+                                    </p>
+                                    <a href='/bookings/'>Booking</a>
+                                </div>
                             </div>
-                            <div class='border border-warning border-3'>
-                                <h2>Drama Movies<br>
-                                </h2>
-                                <p>
-                                    Our drama movie auditorium is built to fit dramas perfectly with a huge
-                                    crystal clear screen and a surround system from luxury brands.
-                                    It has 20 very comfortable seats with different settings and of course space for
-                                    drinks and snacks, you can also with a button remake 2 seats to a sofa.
-                                    The lights, vibrations and smells is also adjusted to dramas and will help to
-                                    give a complete 7D experience.
-                                </p>
-                                <a href='/bookings/'>Booking</a>
+                        </div>
+                        <div class="row justify-content-4">
+                            <div class="col-4">
+                                <div class='border border-danger border-3'>
+                                    <h2>Video Games<br>
+                                    </h2>
+                                    <p>
+                                        Our video gaming auditorium is built to fit gaming perfectly with a huge and
+                                        fast
+                                        crystal clear screen and a surround system from luxury brands.
+                                        It has 20 very comfortable seats with different settings and of course space for
+                                        drinks and snacks, you can also with a button remake 2 seats to a sofa.
+                                        The lights, vibrations and smells is also adjusted to video games and will help
+                                        to
+                                        give a complete 7D experience.
+                                        There is options of all kind of consoles to play on, just give us information
+                                        from
+                                        your wishes.
+                                        With the technology we have, you are able to see the screen according to your
+                                        character and can make it impossible for others to see it if you wish, you can
+                                        of
+                                        course also allow the other players to see your "screen".
+                                    </p>
+                                    <a href='/bookings/'>Booking</a>
+                                </div>
                             </div>
-                            <div class='border border-danger border-3'>
-                                <h2>Video Games<br>
-                                </h2>
-                                <p>
-                                    Our video gaming auditorium is built to fit gaming perfectly with a huge and fast
-                                    crystal clear screen and a surround system from luxury brands.
-                                    It has 20 very comfortable seats with different settings and of course space for
-                                    drinks and snacks, you can also with a button remake 2 seats to a sofa.
-                                    The lights, vibrations and smells is also adjusted to video games and will help to
-                                    give a complete 7D experience.
-                                    There is options of all kind of consoles to play on, just give us information from
-                                    your wishes.
-                                    With the technology we have, you are able to see the screen according to your
-                                    character and can make it impossible for others to see it if you wish, you can of
-                                    course also allow the other players to see your "screen".
-                                </p>
-                                <a href='/bookings/'>Booking</a>
-                            </div>
-                            <p class="card-text text-muted h6">
-                            </p>
                         </div>
                     </div>
                 </div>
 
+                <nav aria-label="Page navigation">
+
+                </nav>
+
             </div>
-            <div class="row">
 
-
-
-            </div>
-        </div>
-    </div>
-
-    <nav aria-label="Page navigation">
-
-    </nav>
-
-</div>
-
-<!-- about.html content ends here -->
-{% endblock %}
+            <!-- about.html content ends here -->
+            {% endblock %}
