--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,23 +22,75 @@
                                 <h2 class="card-title"></h2>
                             </a>
                             <h2>{{ home.title }}</h2>
-                            <h2 class='border border-success border-3'>Action Movies<br><a href='/bookings/'>Booking</a>
-                            </h2>
-                            <h2 class='border border-info border-3'>Comedy Movies<br><a href='/bookings/'>Booking</a>
-                            </h2>
-                            <h2 class='border border-warning border-3'>Drama Movies<br><a href='/bookings/'>Booking</a>
-                            </h2>
-                            <h2 class='border border-danger border-3'>Video Games<br><a href='/bookings/'>Booking</a>
-                            </h2>
+                            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                        aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                        aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                                        aria-label="Slide 4"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/samples/logo"
+                                            class="d-block w-100" alt="Action Movies">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h2>Action Movies<br><a href='/bookings/'>Booking</a>
+                                            </h2>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/samples/cloudinary-icon"
+                                            class="d-block w-100" alt="Comedy Movies">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h2>Comedy Movies<br><a href='/bookings/'>Booking</a>
+                                            </h2>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/sample"
+                                            class="d-block w-100" alt="Drama Movies">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h2>Drama Movies<br><a href='/bookings/'>Booking</a>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/samples/animals/reindeer"
+                                            class="d-block w-100" alt="Video Games">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h2>Video Games<br><a href='/bookings/'>Booking</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+
                             <p class="card-text h6 border border-dark border-3">The Fancy Cinema Castle is
                                 different from other cinemas.<br>
-                                Here you will book a whole auditorium for 2 to 20 people, where you can watch movies or
+                                Here you will book a whole auditorium for 2 to 20 people, where you can
+                                watch movies or
                                 play games for 5 hours a session.<br>
-                                You will experience superior video and sound quality and you will tell us what movies in
-                                the genre you want to watch or which games and gaming consoles you want to play on.<br>
-                                We have a great selection of options to eat and snack on and also a great selection of
+                                You will experience superior video and sound quality and you will tell us
+                                what movies in
+                                the genre you want to watch or which games and gaming consoles you want to
+                                play on.<br>
+                                We have a great selection of options to eat and snack on and also a great
+                                selection of
                                 soda and we brew our own beer.<br>
-                                If you don't add any information about movies or games in your wishes in the booking
+                                If you don't add any information about movies or games in your wishes in the
+                                booking
                                 form, we will choose for you.
                             </p>
                         </div>
