--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,10 @@ body {
     position: absolute;
 }
 
+.log-register {
+    position: absolute;
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
