--- a/templates/base.html
+++ b/templates/base.html
@@ -28,10 +28,7 @@
     <!-- Custom CSS -->
     <link rel='stylesheet' href='{% static "css/style.css" %}'>
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="static/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/favicons/favicon-16x16.png">
-    <link rel="manifest" href="static/favicons/site.webmanifest">
+    <link rel='icon' type='image/x-icon' href='{% static "favicons/favicon.ico" %}'>
 
 </head>
 
@@ -86,43 +83,43 @@
         <p class='text-end m-3'>You are logged in as {{ user }}</p>
         {% else %}
         <p class='text-end m-3'>You are not logged in</p>
-        {% endif %}<main class="flex-shrink-0 main-bg bg-dark">
-            <h1 id='h1'>Welcome to The Fancy Cinema Castle</h1>
-            <img id='cinema-castle' loading="lazy"
-                src="https://res.cloudinary.com/dpfuyoali/image/upload/The Fancy Cinema Castle/xsavj5bsme6swc90sj4q.jpg"
-                alt="Cinema Castle">
-            {% block content %}
-            <!-- Content Goes here -->
-            {% endblock content %}
+        {% endif %}
+        <h1 id='h1'>Welcome to The Fancy Cinema Castle</h1>
+        <img id='cinema-castle' loading="lazy"
+            src="https://res.cloudinary.com/dpfuyoali/image/upload/The Fancy Cinema Castle/xsavj5bsme6swc90sj4q.jpg"
+            alt="Cinema Castle">
+        {% block content %}
+        <!-- Content Goes here -->
+        {% endblock content %}
 
-        </main>
+    </main>
 
-        <!-- Footer -->
-        <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1 fixed-bottom">
-            <p class="m-0 text-center">
-                {% block copyright %}
-                Copyright 2024 Alexander Åberg
-                {% endblock %}
-            </p>
-            <p class="m-0 text-center">
-                <a class='text-secondary' href="https://facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Our Facebook (Opens in a new browser tab)"><i class="fa-brands fa-facebook"></i></a>
-                <a class='text-secondary' href="https://instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Our instagram (Opens in a new browser tab)"><i class="fa-brands fa-instagram"></i></a>
-                <a class='text-secondary' href="https://youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Our YouTube (Opens in a new browser tab)"><i class="fa-brands fa-youtube"></i></a>
-                <a class='text-secondary' href="https://x.com/" target="_blank" rel="noopener"
-                    aria-label="Our X (Opens in a new browser tab)"><i class="fa-brands fa-x-twitter"></i></a>
-            </p>
-        </footer>
-        <!-- Font Awesome Kit -->
-        <script src="https://kit.fontawesome.com/b2b2c0091d.js" crossorigin="anonymous"></script>
-        <!-- Boostrap -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-        </script>
-        {% block extras %}
-        {% endblock %}
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 bg-dark text-secondary border-top border-1 fixed-bottom">
+        <p class="m-0 text-center">
+            {% block copyright %}
+            Copyright 2024 Alexander Åberg
+            {% endblock %}
+        </p>
+        <p class="m-0 text-center">
+            <a class='text-secondary' href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Our Facebook (Opens in a new browser tab)"><i class="fa-brands fa-facebook"></i></a>
+            <a class='text-secondary' href="https://instagram.com/" target="_blank" rel="noopener"
+                aria-label="Our instagram (Opens in a new browser tab)"><i class="fa-brands fa-instagram"></i></a>
+            <a class='text-secondary' href="https://youtube.com/" target="_blank" rel="noopener"
+                aria-label="Our YouTube (Opens in a new browser tab)"><i class="fa-brands fa-youtube"></i></a>
+            <a class='text-secondary' href="https://x.com/" target="_blank" rel="noopener"
+                aria-label="Our X (Opens in a new browser tab)"><i class="fa-brands fa-x-twitter"></i></a>
+        </p>
+    </footer>
+    <!-- Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/b2b2c0091d.js" crossorigin="anonymous"></script>
+    <!-- Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+    </script>
+    {% block extras %}
+    {% endblock %}
 </body>
 
 </html>
