Fixed size of images on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,12 +5,9 @@
 <!-- index.html content starts here -->
 <div class="container-fluid">
     <div class="row">
-
-        <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-
-                <div class="col-md-4">
+                <div class="col-md-6 col-xxl-4">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
@@ -35,7 +32,7 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/samples/logo"
+                                        <img src="https://res.cloudinary.com/dpfuyoali/image/upload/qiunls0esgwaplxbufcs"
                                             class="d-block w-100" alt="Action Movies">
                                         <div class="carousel-caption d-none d-md-block">
                                             <h2>Action Movies<br><a href='/bookings/'>Booking</a>
