--- a/bookings/templates/bookings/bookingmanager.html
+++ b/bookings/templates/bookings/bookingmanager.html
@@ -32,7 +32,7 @@
                     <div class="col-md-8 card mb-4 mt-3 ">
                         <h3>Booking Manager:</h3>
                         <div class="card-body">
-                            <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
+                            <!-- We want a for loop inside the empty control tags to iterate through each booking-->
                             {% for booking in book %}
                             <div
                                 class="p-2 book{% if not book.approved and book.author == user %} faded{% elif not book.approved %} d-none{% endif %}">
