Made an invisible div in about and styled it to make text pushed up on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,11 @@ body {
     position: absolute;
 }
 
+.spacer {
+    height:65px;
+    width: 100%;
+}
+
 .log-register {
     position: absolute;
 }
