--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -16,6 +16,11 @@ body {
     position: absolute;
 }
 
+.spacer {
+    height:65px;
+    width: 100%;
+}
+
 .brand {
     font-family: Lato, sans-serif;
     font-size: 1.4rem;
