--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
+
 body {
-    color: rgb(225, 201, 201);
+    color: rgb(218, 186, 186);
+    font-family: "Instrument Serif", serif;
 }
 
 #cinema-castle {
@@ -22,7 +25,7 @@ body {
 }
 
 .brand {
-    font-family: Lato, sans-serif;
+    font-family: "Instrument Serif", serif;
     font-size: 1.4rem;
     font-weight: 700;
     color: #4A4A4F;
