--- a/templates/base.html
+++ b/templates/base.html
@@ -78,14 +78,14 @@
         </div>
     </nav>
     <!-- displaying Django messages -->
-<div class="container">
+<div class="container bg-dark min-vw-100">
     <div class="row">
       <div class="col-md-8 offset-md-2">
         {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible
-          fade show" id="msg" role="alert">
+          " id="msg" role="alert">
           {{ message | safe }}
-          <button type="button" class="btn-close"
+          <button type="button" class="btn-close bg-light"
             data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %}
