Changed two words in two descriptions on html

--- a/bookings/templates/bookings/bookingmanager.html
+++ b/bookings/templates/bookings/bookingmanager.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<!-- index.html content starts here -->
+<!-- bookingmanager.html content starts here -->
 <div class="container-fluid">
     <div class="row">
 
