--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block content %}
 
-<!-- About.html content starts here -->
+<!-- about.html content starts here -->
 <div class="container">
   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
     <div class="col">
