Put the spacer class on bookings to make submit button work on shorter screens

--- a/bookings/templates/bookings/bookingmanager.html
+++ b/bookings/templates/bookings/bookingmanager.html
@@ -95,7 +95,7 @@
             <nav aria-label="Page navigation">
 
             </nav>
-
+            <div class="spacer"></div>
         </div>
 
         <!-- bookingmanager.html content ends here -->
