Removed the text "wrote" from bookings

--- a/bookings/templates/bookings/bookingmanager.html
+++ b/bookings/templates/bookings/bookingmanager.html
@@ -38,7 +38,7 @@
                                     {{ booking.booker }}
                                     <span class="font-weight-normal">
                                         {{ booking.date }}
-                                    </span> wrote:
+                                    </span>
                                 </p>
                                 <div id="book{{ book.id }}">
                                     {{ book.session_type | linebreaks }}
